gdnative/tests/ui/from_variant_fail_02.rs
use gdnative::prelude::*;

#[derive(FromVariant)]
pub struct Foo {
    // Not a 'simple' ident, has `::`
    #[variant(baz::quux)]
    bar: String,
}

fn main() {}
